# pytest-schema-snapshot

./: .coveragerc  Makefile  README.md  pyproject.toml  reinstall_plugin.sh  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: reusable-test.yml
__snapshots__/: some_schema.schema.json
docs/: usage_example.md
docs/source/: conf.py
docs/source/basic/: quick_start.rst
pytest_jsonschema_snapshot/: __init__.py  core.py  plugin.py  stats.py
pytest_jsonschema_snapshot/tools/: __init__.py  name_maker.py  name_validator.py  schema_diff.py
pytest_jsonschema_snapshot/tools/genson_addon/: __init__.py  format_detector.py  to_schema_converter.py
pytest_schema_snapshot/: core.py  plugin.py  stats.py  tracking.py
pytest_schema_snapshot/tools/: __init__.py  name_validator.py  schema_diff.py
src/typed_schema_shot/: __init__.py  core.py  plugin.py
src/typed_schemashot/: __init__.py  cfg.py  compare_schemas.py  core.py  plugin.py  schema_utils.py
tests/: test_base.py  test_base_name_callable.py  test_format_detection.py  test_format_validation.py  test_multiple_schema_creation.py  test_name_maker.py  test_schema_utils.py  test_stats.py
tests/__snapshots__/: api_response_schema.schema.json  brand_new_test.schema.json  some_schema.schema.json  updated_schema.schema.json
tests/tools/: test_name_maker.py
tests/tools/genson_addon/: test_examples.py  test_format_modes.py  test_format_safe.py  test_safe_and_union.py
tests/usage/: test_base.py  test_base_name_callable.py  test_multiple_schema_creation.py
tests/usage/__snapshots__/: TestDataClass.get_data.schema.json  array_formats_test.schema.json  date_test.schema.json  datetime_test.schema.json  email_test.schema.json  ipv4_test.schema.json  mixed_formats_test.schema.json  regular_strings_test.schema.json  strict_email_validation_test.schema.json  uri_test.schema.json  uuid_test.schema.json
