[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"

[project]
name = "pytest-jsonschema-snapshot"
dynamic = ["version"]
description = "Pytest plugin for automatic JSON Schema generation and validation from examples"
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.10"
authors = [
  { name = "Miskler" }
]
license = { text = "MIT" }
keywords = ["pytest", "json", "schema", "validation", "genson", "click"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities"
]
dependencies = [
  "click",
  "genson",
  "jsonschema",
  "pytest"
]
urls = { Homepage = "https://github.com/Open-Inflation/pytest-jsonschema-snapshot" }

[project.entry-points."pytest11"]
schemashot = "pytest_jsonschema_snapshot.plugin"

[tool.setuptools.package-data]
"jsonschema_diff" = ["py.typed"]

[tool.hatch.version]
path = "pytest_jsonschema_snapshot/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["pytest_jsonschema_snapshot"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q --cov=pytest_jsonschema_snapshot --cov-report=term-missing --cov-report=html"

[tool.isort]
profile = "black"
