[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"

[project]
name = "pytest-jsonschema-snapshot"
dynamic = ["version"]
description = "Pytest plugin for automatic JSON Schema generation and validation from examples"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [
  { name = "Miskler" }
]
license = { text = "MIT" }
keywords = ["pytest", "json", "schema", "validation", "genson", "rich"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities"
]
dependencies = [
  "genson",
  "pathvalidate",
  "jsonschema",
  "jsonschema-diff",
  "pytest"
]

[project.optional-dependencies]
dev = [
  "pytest-asyncio",
  "pytest-cov",
  "pytest-xdist",
  "black",
  "isort",
  "mypy",
  "flake8",

  "sphinx",
  "sphinx-autoapi",
  "furo",
  "docutils",
  "types-docutils"
]

[project.urls]
Homepage = "https://github.com/Miskler/j"
Repository = "https://github.com/Miskler/jsonschema-diff"
Documentation = "https://miskler.github.io/jsonschema-diff/basic/quick_start/index.html"
Issues = "https://github.com/Miskler/jsonschema-diff/issues"

[project.entry-points."pytest11"]
schemashot = "pytest_jsonschema_snapshot.plugin"

[tool.setuptools.package-data]
"jsonschema_diff" = ["py.typed"]

[tool.hatch.version]
path = "pytest_jsonschema_snapshot/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["pytest_jsonschema_snapshot"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q --cov=pytest_jsonschema_snapshot --cov-report=term-missing --cov-report=html"

[tool.isort]
profile = "black"
